--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,9 @@
-.margintop-16 {
-	margin-top: 16px;
-	margin-bottom: 0;
+.paddingy-64 {
+	padding: 64px 0;
+}
+
+.paddingx-40 {
+	padding: 0 40px;
 }
 
 .part1 {
@@ -77,10 +80,6 @@
 	
 }
 
-.paddingx-40 {
-	padding: 0 40px;
-}
-
 .demo-btn {
 	height: 30px;
 	color: #1943CC;
@@ -104,4 +103,94 @@
 	max-width: 1400px;
 	height: 368;
 
+}
+
+.highlight {
+  color: #4169e1;
+}
+
+.brands {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 32px;
+}
+
+.brand-slider {
+  width: 100%;
+  height: 144px;
+  position: relative;
+  overflow: hidden;
+  background: white;
+}
+
+/* Add gradient overlays */
+.brand-slider::before,
+.brand-slider::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 208px;
+  height: 100%;
+  z-index: 2;
+}
+
+.brand-slider::before {
+  left: 0;
+  background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.brand-slider::after {
+  right: 0;
+  background: linear-gradient(to left, white 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.slide-track {
+  display: flex;
+  width: calc(200px * 12);
+  animation: scroll 40s linear infinite;
+}
+
+.brand-slider.reverse .slide-track {
+  animation: scroll-reverse 40s linear infinite;
+}
+
+.slide-track:hover {
+  animation-play-state: paused;
+}
+
+.slide {
+  width: 208px;
+  height: 112px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.slide img {
+  height: 100%;
+  max-width: auto;
+  object-fit: contain;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-200px * 6));
+  }
+}
+
+@keyframes scroll-reverse {
+  0% {
+    transform: translateX(calc(-200px * 6));
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.slide-track {
+  transition: all 0.3s ease;
 }
