--- a/static/css/main.css
+++ b/static/css/main.css
@@ -345,12 +345,48 @@
 	background-clip: text;
 }
 
-.subtitle-3 {
+.subtitle {
+	font-size: 24px;
 	font-weight: 600;
 	background: linear-gradient(267deg, #5200ff 4.01%, #ff2df7 114.97%);
 	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+}
+
+.screen-max-768 {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+@media (max-width: 768px) {
+	.screen-max-768-gap-1rem {
+		gap: 4rem;
+	}
+
+	.screen-max-768 {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+	}
+
+	.subtitle {
+		font-size: 20px;
+	}
+
+	.dashboard-image {
+		max-width: 350px;
+		height: auto;
+	}
+
+	.reverse-1 {
+		order: 1;
+	}
+
+	.reverse-2 {
+		order: 2;
+	}
 }
 
 .container>div>div {
