--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,3 +1,11 @@
+.navbar {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    z-index: +20;
+}
 .logo {
     color: #415082;
     font-size: 21px;
@@ -10,11 +18,10 @@
 }
 
 @media (min-width: 1024px) {
-    .navbar {
-        height: 80px;
-        max-width: 1280px;
+    .navbar-container {
+        width: 1280px;
+        height: auto;
         margin: auto;
-        padding: 20px 0;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -67,9 +74,12 @@
 }
 
 @media (max-width: 1023px) {
-    .navbar {
+    .navbar-container {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
         position: relative;
-        padding: 1rem;
+        padding: 0 1rem;
     }
 
     .navbar-nav {
