--- a/static/css/main.css
+++ b/static/css/main.css
@@ -509,3 +509,24 @@
 	text-decoration: underline;
 	color: #9CA3AF;
 }
+
+.back-to-top-btn {
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	z-index: 99;
+	font-size: 18px;
+	border: none;
+	outline: none;
+	background-color: #333;
+	color: #fff;
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 50%;
+	transition: opacity 0.3s;
+  }
+  
+  .back-to-top-btn:hover {
+	background-color: #555;
+  }
