--- a/static/css/main.css
+++ b/static/css/main.css
@@ -528,6 +528,21 @@
 	color: #9CA3AF;
 }
 
+.contact-info p a {
+	text-decoration: none;
+	color: black;
+}
+
+.footer-links {
+	display: flex;
+	flex-direction: column;
+}
+
+.footer-links a {
+	text-decoration: none;
+	color: black;
+}
+
 .back-to-top-btn {
 	display: none;
 	position: fixed;
