--- a/static/css/main.css
+++ b/static/css/main.css
@@ -333,12 +333,21 @@
 	text-align: center;
 	font-weight: bold;
 	background: linear-gradient(245deg, #1896bd 11.59%, #542de8 35.77%, #ec276e 59.95%, #d75a00 84.12%);
+	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
-	background-clip: text;
 }
 
 .subtitle {
+	font-size: 24px;
+	font-weight: 600;
+	background: linear-gradient(267deg, #5200ff 4.01%, #ff2df7 114.97%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.returns-title {
 	font-size: 24px;
 	font-weight: 600;
 	background: linear-gradient(267deg, #5200ff 4.01%, #ff2df7 114.97%);
@@ -448,12 +457,6 @@
 	}
 }
 
-/* @media (min-width: 768px) {
-	.technology-card {
-		border-right: none;
-	}
-} */
-
 .technology-img {
 	height: 50px;
 	width: 50px;
@@ -478,12 +481,13 @@
 	.footer-container {
 		display: flex;
 		flex-direction: column;
+		justify-content: start;
 	}
 }
 
 @media (max-width: 758px) {
 	.footer-container {
-		align-items: center;
+		align-items: start;
 		padding: 40px;
 	}
 }
@@ -496,21 +500,6 @@
 .location {
 	max-width: 300px;
 	background-color: #FFFFFF;
-}
-
-.screen-1062 {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-
-	gap: 5rem;
-}
-
-@media (max-width: 1062px) {
-	.screen-1062 {
-		display: flex;
-		flex-direction: column;
-	}
 }
 
 .copy-right {
@@ -552,7 +541,6 @@
 	font-size: 14px;
 	border: none;
 	outline: none;
-	/* color: #6b7280; */
 	color: black;
 	background-color: #ffffff00;
 	cursor: pointer;
