--- a/static/css/totopbtn.css
+++ b/static/css/totopbtn.css
@@ -1,7 +1,7 @@
 .back-to-top-btn {
 	display: block;
 	position: fixed;
-	bottom: 20px;
+	bottom: 10px;
 	right: 20px;
 	z-index: 99;
 	font-size: 14px;
@@ -30,4 +30,15 @@
 	border-radius: 50%;
 	color: #b9b9b9;
 	background-color: white;
+}
+
+.back-to-top-text {
+	font-weight: bold;
+	color: #1F2937;
+}
+
+@media (max-width: 768px) { 
+	.back-to-top-text {
+		display: none;
+	}
 }
