--- a/static/css/book-modal.css
+++ b/static/css/book-modal.css
@@ -12,24 +12,36 @@
 
 .book-modal-content {
     background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
+    max-width: 672px;
+    margin: 96px auto;
     border: 1px solid #888;
-    width: 80%;
+    border-radius: 8px;
 }
 
-.book-close-button {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.book-modal-up {
+    padding: 20px 16px;
+    font-size: 14px;
+    display: flex;
+    flex-direction: row;
 }
 
-.book-close-button:hover,
-.book-close-button:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.ring-container {
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    padding-top: 6px;
+    border-radius: 20px;
+    background-color: #DBEAFE;
+}
+
+.book-modal-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-form {
+    padding: 20px;
+    background-color: #F9FAFB;
 }
 
 form {
@@ -46,10 +58,28 @@ textarea {
 }
 
 button[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #415082;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.cancel-container {
+    padding: 12px 24px;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    background-color: #F9FAFB;
+    border-radius: 0 0 8px 8px;
+
+}
+
+.cancel-container button {
+    border: rgba(0, 0, 0, 0.34) solid 1px;
+    border-radius: 4px;
+    font-weight: bold;
+    padding: 8px 12px;
+    background-color: white;
 }
