--- a/static/css/apply-modal.css
+++ b/static/css/apply-modal.css
@@ -1,24 +1,24 @@
-.book-modal {
+.apply-modal {
     display: none;
     position: fixed;
     z-index: 99999;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-.book-modal-content {
+.apply-modal-content {
     background-color: #fefefe;
     max-width: 672px;
-    margin: 96px auto;
+    margin: 20vh auto;
     border: 1px solid #888;
     border-radius: 8px;
 }
 
-.book-modal-up {
+.apply-modal-up {
     padding: 20px 16px;
     font-size: 14px;
     display: flex;
@@ -34,7 +34,8 @@
     background-color: #DBEAFE;
 }
 
-.book-modal-text {
+.apply-modal-text {
+    margin: 0 16px;
     display: flex;
     flex-direction: column;
 }
