--- a/static/css/main.css
+++ b/static/css/main.css
@@ -271,6 +271,20 @@
 	background: white;
 }
 
+@media (max-width: 1024px) {
+	.brand-slider {
+		width: 100%;
+		height: 128px;
+	}
+}
+
+@media (max-width: 768px) {
+	.brand-slider {
+		width: 100%;
+		height: 104px;
+	}
+}
+
 .brand-slider::before,
 .brand-slider::after {
 	content: "";
@@ -320,9 +334,24 @@
 	padding: 1rem;
 }
 
+@media (max-width: 1024px) {
+	.slide {
+		width: 160px;
+		height: 96px;
+	}
+}
+
+@media (max-width: 768px) {
+	.slide {
+		width: 112px;
+		height: 72px;
+		padding: 0;
+	}
+}
+
 .slide img {
-	height: 100%;
-	max-width: auto;
+	width: 100%;
+	height: auto;
 	object-fit: contain;
 }
 
