--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -235,3 +235,20 @@
         text-align: center;
     }
 }
+
+.book-success {
+    position: absolute;
+    top: 20px;
+    height: 60px;
+    padding: 8px;
+    background-color: white;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+}
+
+.hidden {
+    display: none; /* Hide the alert by default */
+}
