--- a/static/css/retailers.css
+++ b/static/css/retailers.css
@@ -28,7 +28,7 @@
 
 .swiper-navBtn::before,
 .swiper-navBtn::after {
-  font-size: 35px;
+  font-size: 24px;
 }
 
 .swiper-button-next {
@@ -48,14 +48,20 @@
   background-color: #4070F4;
 }
 
+
+
 .bw-image {
-  width: 150px;
-  height: 100px;
+  width: 240px;
+  height: 180px;
 }
 
 @media (max-width: 768px) {
   .bw-image {
-    width: 100px;
-    height: 80px;
+    width: 200px;
+    height: 150px;
   }
+}
+
+.bw-image {
+	filter: grayscale(100%);
 }
