--- a/static/css/main.css
+++ b/static/css/main.css
@@ -40,6 +40,11 @@
 	padding-bottom: 64px;
 }
 
+.paddingy-32 {
+	padding-top: 32px;
+	padding-bottom: 32px;
+}
+
 .paddingx-40 {
 	padding: 0 40px;
 }
@@ -49,11 +54,6 @@
 	padding-right: 32px;
 }
 
-.paddingy-32 {
-	padding-top: 32px;
-	padding-bottom: 32px;
-}
-
 .padding-24 {
 	padding: 24px;
 }
@@ -61,6 +61,18 @@
 .paddingx-20 {
 	padding-left: 20px;
 	padding-right: 20px;
+}
+
+@media (max-width: 768px) {
+	.paddingy-64 {
+		padding-top: 32px;
+		padding-bottom: 32px;
+	}
+
+	.paddingx-32 {
+		padding-left: 16px;
+		padding-right: 16px;
+	}
 }
 
 .rounded-05 {
