--- a/static/css/retailers.css
+++ b/static/css/retailers.css
@@ -4,7 +4,7 @@
   padding: 40px 0;
 }
 
-.retailer-content {
+.retailers-content {
   margin: 0 40px;
   overflow: hidden;
   border-radius: 25px;
@@ -32,11 +32,11 @@
 }
 
 .swiper-button-next {
-  right: 0;
+  right: -5px;
 }
 
 .swiper-button-prev {
-  left: 0;
+  left: -5px;
 }
 
 .swiper-pagination-bullet {
