--- a/static/css/main.css
+++ b/static/css/main.css
@@ -276,9 +276,9 @@
 }
 
 .brand-slider {
+	position: relative;
 	width: 100%;
 	height: 144px;
-	position: relative;
 	overflow: hidden;
 	background: white;
 }
@@ -300,10 +300,11 @@
 .brand-slider::before,
 .brand-slider::after {
 	position: absolute;
+	content: "";
 	top: 0;
 	width: 208px;
 	height: 100%;
-	z-index: 2;
+	z-index: 20;
 }
 
 .brand-slider::before {
