--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,87 +1,102 @@
 .input-pink-in-button {
-        position: relative;
-        z-index: 2;
-      }
+  position: relative;
+  z-index: 2;
+}
 
-      .input-pink-in-button > input {
-        width: 100%;
-        padding: 10px 80px 10px 12px;
-        outline: none;
-        outline-width: 0;
-        border-style: none;
-        border-style: solid;
-        border-width: 1px;
-        border-radius: 7px;
-        transition-duration: 500ms;
-        transition: all;
-      }
+.input-pink-in-button>input {
+  width: 100%;
+  padding: 10px 80px 10px 12px;
+  outline: none;
+  outline-width: 0;
+  border-style: none;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 7px;
+  transition-duration: 500ms;
+  transition: all;
+}
 
-      .input-pink-in-button > input:focus {
-        width: 100%;
-        padding: 10px 80px 10px 12px;
-        border-color: rgb(236 72 153);
-        border-width: 2px;
-      }
+.input-pink-in-button>input:focus {
+  width: 100%;
+  padding: 10px 80px 10px 12px;
+  border-color: rgb(236 72 153);
+  border-width: 2px;
+}
 
-      .input-pink-in-button > button {
-        position: absolute;
-        padding: 8px 16px;
-        right: 4px;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: rgb(236 72 153);
-        border-style: none;
-        color: #fff;
-        height: inherit;
-        transition: all;
-        transition-duration: 300ms;
-        font-size: 0.75rem;
-        border-radius: 0.25rem;
-        box-shadow: 0px 10px 15px 3px rgba(236, 72, 152, 0.2);
-      }
+.input-pink-in-button>button {
+  position: absolute;
+  padding: 8px 16px;
+  right: 4px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgb(236 72 153);
+  border-style: none;
+  color: #fff;
+  height: inherit;
+  transition: all;
+  transition-duration: 300ms;
+  font-size: 0.75rem;
+  border-radius: 0.25rem;
+  box-shadow: 0px 10px 15px 3px rgba(236, 72, 152, 0.2);
+}
 
-      .input-pink-in-button > button:hover {
-        background-color: rgb(236 72 153);
-        box-shadow: 0px 10px 15px -3px rgba(236, 72, 152, 0.4);
-      }
+.input-pink-in-button>button:hover {
+  background-color: rgb(236 72 153);
+  box-shadow: 0px 10px 15px -3px rgba(236, 72, 152, 0.4);
+}
 
-      .input-pink-in-button > label {
-        position: absolute;
-        padding: 8px 16px;
-        left: 4px;
-        top: 50%;
-        transform: translateY(-50%);
-        border-style: none;
-        height: inherit;
-        transition: all;
-        transition-duration: 300ms;
-        border-radius: 0.25rem;
-        z-index: 0;
-        font-size: 0.875rem;
-        padding: 0;
-      }
+.input-pink-in-button>label {
+  position: absolute;
+  padding: 8px 16px;
+  left: 4px;
+  top: 50%;
+  transform: translateY(-50%);
+  border-style: none;
+  height: inherit;
+  transition: all;
+  transition-duration: 300ms;
+  border-radius: 0.25rem;
+  z-index: 0;
+  font-size: 0.875rem;
+  padding: 0;
+}
 
-      .card-own {
-        z-index: 1 !important;
-      }
+.card-own {
+  z-index: 1 !important;
+}
 
-      .card-own::after {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(191, 230, 245);
-        content: " ";
-        top: 0px;
-        left: 0px;
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-          0 2px 4px -2px rgba(0, 0, 0, 0.1);
-        padding: 2.5rem;
-        border-radius: 1.5rem;
-        transform: rotate3d(0, 0, 1, 2deg);
-      }
-      #latest-post a, #post-categories a{
-        transition: all;
-      }
-      #latest-post a:hover, #post-categories a:hover{
-        color: #660091!important;
-      }
+.card-own::after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(191, 230, 245);
+  content: " ";
+  top: 0px;
+  left: 0px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  padding: 2.5rem;
+  border-radius: 1.5rem;
+  transform: rotate3d(0, 0, 1, 2deg);
+}
+
+#latest-post a,
+#post-categories a {
+  transition: all;
+}
+
+#latest-post a:hover,
+#post-categories a:hover {
+  color: #660091 !important;
+}
+
+.blank {
+ height: 100px;
+ margin-top: 100px;
+}
+
+@media (max-width: 1024px) {
+  .blank {
+    display: none;
+  }
+}
